# simpleods

./: .gitignore  LICENSE  README.md  process-all.sh  pyproject.toml
src/: install-app.sh  install-deps.sh
src/simpleodf/: __init__.py  logger.py  odfwrapper.py
src/simpleods/: logger.py  odfwrapper.py
src/testsimpleodf/: __init__.py  runtests.py  test_logger.py  test_odfwrapper.py
src/testsimpleodf/data/: __init__.py
src/testsimpleods/: __init__.py  runtests.py  test_logger.py  test_odfwrapper.py
src/testsimpleods/data/: __init__.py  repeated.ods
tools/: checkall.sh  codecheck.sh  coverage.sh  doccheck.sh  installvenv.sh  mdpreproc.py  mypy.cfg  profiler.sh  pylint3.config  typecheck.sh
