[project]
name = "simpleods"
version = "1.0.3"
description = "simple wrapper objects for odfpy package allowing easy ods spreadsheet data navigation and editing"
keywords = ["ods", "spreadsheet", "odfpy"]
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
    ## separate 'name' and 'email' hack to fill "Author:" and "Author-email:" fields
    { name = "Arkadiusz Netczuk" }, { email = "dev.arnet@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "odfpy",
]

[project.urls]
Homepage = "https://github.com/anetczuk/simpleods"
Repository = "https://github.com/anetczuk/simpleods"

[project.optional-dependencies]
dev = [
    ### dependencies for "tools" scripts

    "xmltodict",    ## for mdpreproc.py

    "black",
    "pycodestyle",
    "flake8",
    "pylint",
    "ruff",
    "complexipy",
    "bandit",
    "codespell",
    "shellcheck_py",
    "pydocstyle",
    "mypy",
    "coverage",             ## for coverage.sh
    "mdlinkscheck",

    ## for profiling (tools/profiler.sh)
    "pyprof2calltree",   
    "snakeviz",
    "mtprof",
    "viztracer",
]

#[project.scripts]
#myprogramexec = "myprogrampkg.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["simpleods*"]

#[tool.setuptools.package-data]
#myprogramexec = [
#    "ui/*.ui",
#]

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"
